--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,8 @@ services:
     ports : 
       - "7474:7474"
       - "7687:7687"
+    environment :
+      - NEO4J_AUTH: username:password
 
   domainexpert : 
     build : ./domainexpert
