--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - "7474:7474"
       - "7687:7687"
     environment :
-      - NEO4J_AUTH: username:password
+      - NEO4J_AUTH: neo4j:neo4j
 
   domainexpert : 
     build : ./domainexpert
