--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,41 @@
 version: "2"
 services:
-  kafka :
-    image : spotify/kafka
-    container_name : kafka
-    ports :
-      - "9092:9092"
-      - "2181:2181"
-    environment:
-      - ADVERTISED_PORT=9092
+#   kafka :
+#     image : spotify/kafka
+#     container_name : kafka
+#     ports :
+#       - "9092:9092"
+#       - "2181:2181"
+#     environment:
+#       - ADVERTISED_PORT=9092
 
-  eureka:
-    build : ./discovery-service-eureka
-    container_name : eureka
-    ports :
-      - "8020:8020"
+#   eureka:
+#     build : ./discovery-service-eureka
+#     container_name : eureka
+#     ports :
+#       - "8020:8020"
 
-  # db:
-  #   image: mysql:latest
-  #   container_name : mysql
-  #   restart: always
-  #   ports :
-  #     - "3306:3306"
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD : mysql
-  #     MYSQL_DATABASE : OAUTH
+#   # db:
+#   #   image: mysql:latest
+#   #   container_name : mysql
+#   #   restart: always
+#   #   ports :
+#   #     - "3306:3306"
+#   #   environment:
+#   #     MYSQL_ROOT_PASSWORD : mysql
+#   #     MYSQL_DATABASE : OAUTH
 
-  ui : 
-    build : ./UserUI
-    ports : 
-      - "4200:4200"
+#   ui : 
+#     build : ./UserUI
+#     ports : 
+#       - "4200:4200"
 
-  # auth : 
-  #   build : ./OAuthService
-  #   ports :
-  #     - "8087:8087"
-  #   environment :
-  #      mysql_url : mysql
+#   # auth : 
+#   #   build : ./OAuthService
+#   #   ports :
+#   #     - "8087:8087"
+#   #   environment :
+#   #      mysql_url : mysql
   
   graph :
     image : neo4j
@@ -44,111 +44,111 @@ services:
       - "7474:7474"
       - "7687:7687"
     environment :
-      - NEO4J_AUTH = neo4j/aditya123
-
-  domainexpert : 
-    build : ./domainexpert
-    ports : 
-      - "8089:8089"
-    depends_on :
-      - kafka
-      - eureka
+      - NEO4J_AUTH = none
+      
+#   domainexpert : 
+#     build : ./domainexpert
+#     ports : 
+#       - "8089:8089"
+#     depends_on :
+#       - kafka
+#       - eureka
   
-  googleapi :
-    build : ./GoogleApi
-    ports :
-      - "8081:8081"
-    depends_on :
-      - kafka
-      - eureka
+#   googleapi :
+#     build : ./GoogleApi
+#     ports :
+#       - "8081:8081"
+#     depends_on :
+#       - kafka
+#       - eureka
   
-  crawler : 
-    build : ./Crawler
-    ports :
-      - "8070:8070"
-    depends_on : 
-      - kafka
-      - eureka
+#   crawler : 
+#     build : ./Crawler
+#     ports :
+#       - "8070:8070"
+#     depends_on : 
+#       - kafka
+#       - eureka
   
-  parser :
-    build : ./Parser
-    ports :
-      - "8060:8060"
-    depends_on :
-      - kafka
-      - eureka
+#   parser :
+#     build : ./Parser
+#     ports :
+#       - "8060:8060"
+#     depends_on :
+#       - kafka
+#       - eureka
   
-  indexer :
-    build : ./Semantic-Search-Index
-    ports :
-      - "8085:8085"
-    depends_on :
-      - kafka
-      - eureka 
+#   indexer :
+#     build : ./Semantic-Search-Index
+#     ports :
+#       - "8085:8085"
+#     depends_on :
+#       - kafka
+#       - eureka 
   
-  conceptgraph :
-    build : ./neo4j-concept
-    ports :
-      - "8095:8095"
-    depends_on :
-      - kafka
-      - graph
-      - eureka
+#   conceptgraph :
+#     build : ./neo4j-concept
+#     ports :
+#       - "8095:8095"
+#     depends_on :
+#       - kafka
+#       - graph
+#       - eureka
   
   intentgraph :
     build : ./neo4j-intent
     ports :
       - "8096:8096"
-    depends_on : 
-      - kafka
+    depends_on :
       - graph
-      - eureka
+      # - kafka
+      # - eureka
 
-  spellchecker :
-    build : ./spell-checker
-    ports :
-      - "8051:8051"
-    depends_on :
-      - kafka
-      - eureka
+#   # spellchecker :
+#   #   build : ./spell-checker
+#   #   ports :
+#   #     - "8051:8051"
+#   #   depends_on :
+#   #     - kafka
+#   #     - eureka
  
-  pos_ner :
-    build : ./nlp
-    ports :
-      - "8052:8052"
-    depends_on :
-      - kafka
-      - eureka
+#   # pos_ner :
+#   #   build : ./nlp
+#   #   ports :
+#   #     - "8052:8052"
+#   #   depends_on :
+#   #     - kafka
+#   #     - eureka
  
-  stopwords :
-    build : ./StopWords
-    ports :
-      - "8053:8053"
-    depends_on :
-      - kafka
-      - eureka
+#   # stopwords :
+#   #   build : ./StopWords
+#   #   ports :
+#   #     - "8053:8053"
+#   #   depends_on :
+#   #     - kafka
+#   #     - eureka
   
-  lemmatizer :
-    build : ./Lemmatizer
-    ports :
-      - "8054:8054"
-    depends_on :
-      - kafka
-      - eureka
+#   # lemmatizer :
+#   #   build : ./Lemmatizer
+#   #   ports :
+#   #     - "8054:8054"
+#   #   depends_on :
+#   #     - kafka
+#   #     - eureka
   
-  intentsearch:
-    build : ./IntentSearchService
-    ports :
-      - "8055:8055"
-    depends_on :
-      - kafka
-      - eureka
-      - graph
+#   intentsearch:
+#     build : ./IntentSearchService
+#     ports :
+#       - "8055:8055"
+#     depends_on :
+#       - kafka
+#       - eureka
+#       - graph
 
-  stomp:
-    build : ./stomp
-    ports :
-      - "8088:8088"
-    depends_on :
-      - kafka
-      - eureka
+#   # stomp:
+#   #   build : ./stomp
+#   #   ports :
+#   #     - "8088:8088"
+#   #   depends_on :
+#   #     - kafka
+#   #     - eureka
