--- a/OAuthService/src/main/resources/application.properties
+++ b/OAuthService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name: oauthservice
 server.port=8087
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url = jdbc:mysql://${mysql_url}/OAUTH
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://mysql:3306/OAUTH
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=aditya123
